--- a/SegmentedButton/build.gradle
+++ b/SegmentedButton/build.gradle
@@ -1,10 +1,16 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
+
 }
 
+def libraryId = "fernan.apps.segmented"
+def libraryName = "segmented-button"
+def libraryVersion = "0.0.1"
+
 android {
-    namespace 'fernan.apps.segmented'
+    namespace libraryId
     compileSdk 33
 
     defaultConfig {
@@ -38,4 +44,19 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+}
+
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = libraryId
+                artifactId = libraryName
+                version = libraryVersion
+            }
+        }
+    }
 }
