--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,9 @@ android {
 
 dependencies {
     //implementation project(path: ':SegmentedButton')
-    implementation 'com.github.FernanApps:SegmentedButton:+'
+    //implementation "com.github.FernanApps:SegmentedButton:0.0.1"
+    implementation 'com.github.FernanApps:SegmentedButton:0.0.1@aar'
+
     //implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
 
     implementation 'androidx.core:core-ktx:1.7.0'
