--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,6 @@ fabric.properties
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/androidstudio,android
+
+
+github.properties
