--- a/SegmentedButton/build.gradle
+++ b/SegmentedButton/build.gradle
@@ -151,6 +151,6 @@ task pushAar {
 }
 
 
-assemble.dependsOn initAssembleRelease
-copyRelease.dependsOn assemble
-pushAar.dependsOn copyRelease
+//assemble.dependsOn initAssembleRelease
+//copyRelease.dependsOn assemble
+//pushAar.dependsOn copyRelease
