--- a/SegmentedButton/build.gradle
+++ b/SegmentedButton/build.gradle
@@ -94,7 +94,7 @@ task initAssembleRelease {
 }
 
 task copyRelease(type: Copy) {
-
+    doLast {
         try {
             def sep = File.separator
             def packagesName = "packages"
@@ -124,6 +124,9 @@ task copyRelease(type: Copy) {
         catch (Exception e) {
             println("Error CopyRelease ${e.getMessage()}")
         }
+    }
+
+
 
 }
 
