--- a/SegmentedButton/build.gradle
+++ b/SegmentedButton/build.gradle
@@ -136,9 +136,8 @@ task pushAar {
     doLast {
 
         LocalDate now = LocalDate.now()
-        String formattedDate = now.format(DateTimeFormatter.ofPattern("yyyy-MM-dd"))
-        println "Current date is: " + formattedDate
-
+        def formattedDate = now.format(DateTimeFormatter.ofPattern("yyyy-MM-dd"))
+        println "Current date is: $formattedDate"
 
 
         def sep = File.separator
