--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id "de.undercouch.download" version "5.4.0"
+    //id "de.undercouch.download" version "5.4.0"
 
 }
 
@@ -56,15 +56,15 @@ task getVersionCode  {
     }
 }
 
-
-task downloadFile(type: Download) {
-    doLast {
-        println 'download Aar Library'
-        src 'https://github.com/FernanApps/SegmentedButton/raw/master/packages/SegmentedButton-release.aar'
-        dest "$rootDir${File.separator}app${File.separator}libs"
-        overwrite true
-    }
-
-}
-
+//
+//task downloadFile(type: Download) {
+//
+//        println 'download Aar Library'
+//        src 'https://github.com/FernanApps/SegmentedButton/raw/master/packages/SegmentedButton-release.aar'
+//        dest "$rootDir${File.separator}app${File.separator}libs"
+//        overwrite true
+//
+//
+//}
+//
 //preBuild.dependsOn downloadFile
